--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation "io.github.bonigarcia:webdrivermanager:4.4.0"
 
 }
 
